[package]
name = "smashline_test"
version = "0.1.0"
authors = ["LilyLambda"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/hdr-development/smashline.git" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
param_config = { git = "https://github.com/csharpm7/lib_paramconfig.git"}
the_csk_collection_api = { git = "https://github.com/Coolsonickirby/the_csk_collection_api.git" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
smash-bgm-property = "1.2.0"
hash40 = "1.1"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1
